// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using SystemChallengeAPI.Infrastructure;

#nullable disable

namespace SystemChallengeAPI.Migrations
{
    [DbContext(typeof(ApplicationDbContext))]
    [Migration("20260706160125_AddReadModel")]
    partial class AddReadModel
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.9")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("SystemChallengeAPI.Domain.Product", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("datetime2");

                    b.Property<string>("CreatedBy")
                        .IsRequired()
                        .HasMaxLength(256)
                        .HasColumnType("nvarchar(256)");

                    b.Property<Guid?>("CurrentApprovedVersionId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTime?>("DeletedAt")
                        .HasColumnType("datetime2");

                    b.Property<string>("DeletedBy")
                        .HasMaxLength(256)
                        .HasColumnType("nvarchar(256)");

                    b.Property<bool>("IsDeleted")
                        .HasColumnType("bit");

                    b.HasKey("Id");

                    b.HasIndex("CurrentApprovedVersionId");

                    b.ToTable("Products");

                    b.HasData(
                        new
                        {
                            Id = new Guid("11111111-1111-1111-1111-111111111111"),
                            CreatedAt = new DateTime(2026, 5, 1, 8, 0, 0, 0, DateTimeKind.Utc),
                            CreatedBy = "capturer@moyo.com",
                            IsDeleted = false
                        },
                        new
                        {
                            Id = new Guid("22222222-2222-2222-2222-222222222222"),
                            CreatedAt = new DateTime(2026, 5, 3, 8, 0, 0, 0, DateTimeKind.Utc),
                            CreatedBy = "capturer@moyo.com",
                            IsDeleted = false
                        },
                        new
                        {
                            Id = new Guid("33333333-3333-3333-3333-333333333333"),
                            CreatedAt = new DateTime(2026, 5, 5, 8, 0, 0, 0, DateTimeKind.Utc),
                            CreatedBy = "capturer@moyo.com",
                            IsDeleted = false
                        });
                });

            modelBuilder.Entity("SystemChallengeAPI.Domain.ProductVersion", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("datetime2");

                    b.Property<string>("CreatedBy")
                        .IsRequired()
                        .HasMaxLength(256)
                        .HasColumnType("nvarchar(256)");

                    b.Property<DateTime?>("DecidedAt")
                        .HasColumnType("datetime2");

                    b.Property<string>("DecidedBy")
                        .HasMaxLength(256)
                        .HasColumnType("nvarchar(256)");

                    b.Property<string>("DecisionReason")
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<decimal>("Price")
                        .HasPrecision(18, 2)
                        .HasColumnType("decimal(18,2)");

                    b.Property<Guid>("ProductId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("Sku")
                        .IsRequired()
                        .HasMaxLength(64)
                        .HasColumnType("nvarchar(64)");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("nvarchar(20)");

                    b.Property<int>("VersionNumber")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("ProductId", "VersionNumber")
                        .IsUnique();

                    b.ToTable("ProductVersions");

                    b.HasData(
                        new
                        {
                            Id = new Guid("aaaaaaaa-0000-0000-0000-000000000001"),
                            CreatedAt = new DateTime(2026, 5, 1, 8, 0, 0, 0, DateTimeKind.Utc),
                            CreatedBy = "capturer@moyo.com",
                            DecidedAt = new DateTime(2026, 5, 2, 10, 0, 0, 0, DateTimeKind.Utc),
                            DecidedBy = "manager@moyo.com",
                            Description = "2.4GHz optical wireless mouse.",
                            Name = "Wireless Mouse",
                            Price = 299.99m,
                            ProductId = new Guid("11111111-1111-1111-1111-111111111111"),
                            Sku = "MSE-WL-001",
                            Status = "Approved",
                            VersionNumber = 1
                        },
                        new
                        {
                            Id = new Guid("bbbbbbbb-0000-0000-0000-000000000001"),
                            CreatedAt = new DateTime(2026, 5, 3, 8, 0, 0, 0, DateTimeKind.Utc),
                            CreatedBy = "capturer@moyo.com",
                            DecidedAt = new DateTime(2026, 5, 4, 9, 0, 0, 0, DateTimeKind.Utc),
                            DecidedBy = "manager@moyo.com",
                            Description = "Tactile mechanical keyboard, blue switches.",
                            Name = "Mechanical Keyboard",
                            Price = 899.99m,
                            ProductId = new Guid("22222222-2222-2222-2222-222222222222"),
                            Sku = "KBD-MEC-001",
                            Status = "Approved",
                            VersionNumber = 1
                        },
                        new
                        {
                            Id = new Guid("bbbbbbbb-0000-0000-0000-000000000002"),
                            CreatedAt = new DateTime(2026, 6, 1, 8, 0, 0, 0, DateTimeKind.Utc),
                            CreatedBy = "capturer@moyo.com",
                            Description = "Adds RGB backlighting and a volume wheel.",
                            Name = "Mechanical Keyboard (RGB)",
                            Price = 999.99m,
                            ProductId = new Guid("22222222-2222-2222-2222-222222222222"),
                            Sku = "KBD-MEC-001",
                            Status = "Pending",
                            VersionNumber = 2
                        },
                        new
                        {
                            Id = new Guid("cccccccc-0000-0000-0000-000000000001"),
                            CreatedAt = new DateTime(2026, 5, 5, 8, 0, 0, 0, DateTimeKind.Utc),
                            CreatedBy = "capturer@moyo.com",
                            DecidedAt = new DateTime(2026, 5, 6, 11, 0, 0, 0, DateTimeKind.Utc),
                            DecidedBy = "manager@moyo.com",
                            DecisionReason = "SKU already in use on another product; correct and resubmit.",
                            Description = "7-port USB-C hub with HDMI and PD.",
                            Name = "USB-C Hub 7-in-1",
                            Price = 549.99m,
                            ProductId = new Guid("33333333-3333-3333-3333-333333333333"),
                            Sku = "HUB-USBC-7",
                            Status = "Rejected",
                            VersionNumber = 1
                        },
                        new
                        {
                            Id = new Guid("cccccccc-0000-0000-0000-000000000002"),
                            CreatedAt = new DateTime(2026, 6, 10, 8, 0, 0, 0, DateTimeKind.Utc),
                            CreatedBy = "capturer@moyo.com",
                            Description = "7-port USB-C hub with HDMI and PD.",
                            Name = "USB-C Hub 7-in-1",
                            Price = 549.99m,
                            ProductId = new Guid("33333333-3333-3333-3333-333333333333"),
                            Sku = "HUB-USBC-701",
                            Status = "Draft",
                            VersionNumber = 2
                        });
                });

            modelBuilder.Entity("SystemChallengeAPI.ReadModel.ProductReadModel", b =>
                {
                    b.Property<Guid>("ProductId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uniqueidentifier");

                    b.Property<DateTime>("ApprovedAt")
                        .HasColumnType("datetime2");

                    b.Property<string>("ApprovedBy")
                        .IsRequired()
                        .HasMaxLength(256)
                        .HasColumnType("nvarchar(256)");

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("nvarchar(200)");

                    b.Property<decimal>("Price")
                        .HasPrecision(18, 2)
                        .HasColumnType("decimal(18,2)");

                    b.Property<string>("Sku")
                        .IsRequired()
                        .HasMaxLength(64)
                        .HasColumnType("nvarchar(64)");

                    b.Property<Guid>("VersionId")
                        .HasColumnType("uniqueidentifier");

                    b.Property<int>("VersionNumber")
                        .HasColumnType("int");

                    b.HasKey("ProductId");

                    b.HasIndex("Sku");

                    b.ToTable("ProductReadModel", (string)null);
                });

            modelBuilder.Entity("SystemChallengeAPI.Domain.Product", b =>
                {
                    b.HasOne("SystemChallengeAPI.Domain.ProductVersion", null)
                        .WithMany()
                        .HasForeignKey("CurrentApprovedVersionId")
                        .OnDelete(DeleteBehavior.NoAction);
                });

            modelBuilder.Entity("SystemChallengeAPI.Domain.ProductVersion", b =>
                {
                    b.HasOne("SystemChallengeAPI.Domain.Product", null)
                        .WithMany("Versions")
                        .HasForeignKey("ProductId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("SystemChallengeAPI.Domain.Product", b =>
                {
                    b.Navigation("Versions");
                });
#pragma warning restore 612, 618
        }
    }
}
